--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,5 +6,6 @@
 	<div class="u-header">
 		{{ partial "navbar" . }}
 	</div>
+        {{ if .Params.math }} {{ partial "katex.html" . }} {{ end }}
 </header>
 <main class="container">
