Support generating table of contents
Enable by adding `toc: true` in the post front matter.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ partial "header" . }}
 <article>
 	<header>{{ partial "title" . }}</header>
+	{{ if .Params.toc }} <h2> Table of Contents </h2> {{ .TableOfContents }} {{ end }}
 	{{ .Content }}
 </article>
 <nav class="no-print post-nav">
