--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,9 +2,9 @@
 		</main>
 		<footer class="container no-print">
 			<div class="u-footer">
-				{{ partial "social.html" . }}
+				<!-- {{ partial "social.html" . }} -->
 				<p>
-                                    {{ with .Site.Copyright }} {{ . | safeHTML }} {{ end }} {{ if .Site.Params.themeAttrib | default true }} ~ theme <a href="https://github.com/yursan9/manis-hugo-theme">manis</a><br> {{ end }} {{ with .Site.Params.LicenseURL }} | ~ <a href="{{.}}">{{ T "license" }}</a> {{ end }}
+                    {{ with .Site.Copyright }} {{ . | safeHTML }} {{ end }} {{ if .Site.Params.themeAttrib | default true }} ~ theme <a href="https://github.com/lijuno/manis">manis</a><br> {{ end }} {{ with .Site.Params.LicenseURL }} | ~ <a href="{{.}}">{{ T "license" }}</a> {{ end }}
 				</p>
 				{{ if 0 }}  <!-- Remove "Back to Up" button -->
 				{{ if ne .Kind "home" }}
